--- a/src/example/helloworld/index.html
+++ b/src/example/helloworld/index.html
@@ -22,7 +22,7 @@
 
     </div>
 
-    <script src="main.js" type="module"> </script>
+    <script src="./main.js" type="module"> </script>
 </body>
 
 </html>
