--- a/src/example/helloworld/index.html
+++ b/src/example/helloworld/index.html
@@ -14,14 +14,16 @@
         .blue {
             color: blue;
         }
+
+        .hard{
+            border: 2px solid red;
+        }
     </style>
 </head>
 
 <body>
     <div id="app">
-
     </div>
-
     <script src="./main.js" type="module"> </script>
 </body>
 
