--- a/src/example/helloworld/index.html
+++ b/src/example/helloworld/index.html
@@ -15,15 +15,17 @@
             color: blue;
         }
 
-        .hard{
+        .hard {
             border: 2px solid red;
         }
     </style>
 </head>
 
 <body>
-    <div id="app">
-    </div>
+    <!-- 
+        根节点，
+     -->
+    <div id="app"> </div>
     <script src="./main.js" type="module"> </script>
 </body>
 
